--- a/text.html
+++ b/text.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div>測試顯示內容</div>
+    <a href="https://john8125.github.io/example_web.github.io/">index</a>
     <div>TEST ONE TWO THREE.....</div>
 </body>
 </html>
