--- a/text.html
+++ b/text.html
@@ -10,5 +10,6 @@
     <div>測試顯示內容</div>
     <a href="https://john8125.github.io/example_web.github.io/">index</a>
     <div>TEST ONE TWO THREE.....</div>
+    <img src="https://john8125.github.io/example_web.github.io/P1.jpg" />
 </body>
 </html>
