--- a/text.html
+++ b/text.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="該怎麼有好網站">
+    <title>John試試水溫</title>
 </head>
 <body>
+    <h1>標籤John</h1>
     <div>測試顯示內容</div>
     <a href="https://john8125.github.io/example_web.github.io/">index</a>
     <div>TEST ONE TWO THREE.....</div>
