--- a/text.html
+++ b/text.html
@@ -14,5 +14,6 @@
     <a href="https://john8125.github.io/example_web.github.io/">index</a>
     <div>TEST ONE TWO THREE.....</div>
     <img src="https://john8125.github.io/example_web.github.io/P1.jpg" />
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d252.78585725172167!2d121.50589000019822!3d25.037883158522327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9a704f1f265%3A0xa2f5dafec64f6529!2z5a625qiC56aPIOahguael-W6lw!5e0!3m2!1szh-TW!2stw!4v1715590503041!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
