--- a/text.html
+++ b/text.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="GitHub, JOHN試試水溫, JOHN123456">
     <meta name="viewport" content="該怎麼有好網站">
     <title>John試試水溫</title>
 </head>
